CLJS version bump and opts update